# AssemblerEngine_concept1

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
AssemblerEngine/: AssemblerEngine.cpp  AssemblerEngine.h  CMakeLists.txt
AssemblerEngine.API/: CMakeLists.txt
AssemblerEngine.API/includes/apis/: ae_filesystem.h  ae_os_filesystem.h  ae_os_shared_lib.h  api_registry.h  application.h  camera.h  imgui.h  input.h  logging.h  opengl_backend.h  plugin_registry.h  renderer.h  shader.h  system_info.h  ui_tab.h  window.h
AssemblerEngine.API/includes/core/: core.h  os.h  string.h  types.h  vector.h
AssemblerEngine.API/includes/math/: affine-mat.h  affine.h  affine2d.h  applesimd.h  bezier.h  box.h  call.h  cam.h  color.h  common.h  curve.h  ease.h  euler.h  frustum.h  io.h  mat2.h  mat3.h  mat4.h  math.h  plane.h  project.h  quat.h  ray.h  sphere.h  struct.h  types-struct.h  types.h  util.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h
AssemblerEngine.API/includes/math/clipspace/: ortho_lh_no.h  ortho_lh_zo.h  ortho_rh_no.h  ortho_rh_zo.h  persp.h  persp_lh_no.h  persp_lh_zo.h  persp_rh_no.h  persp_rh_zo.h  project_no.h  project_zo.h  view_lh.h  view_lh_no.h  view_lh_zo.h  view_rh.h  view_rh_no.h  view_rh_zo.h
AssemblerEngine.API/includes/math/simd/: arm.h  intrin.h  x86.h
AssemblerEngine.API/includes/math/simd/avx/: affine.h  mat4.h
AssemblerEngine.API/includes/math/simd/neon/: affine.h  mat2.h  mat4.h  quat.h
AssemblerEngine.API/includes/math/simd/sse2/: affine.h  mat2.h  mat3.h  mat4.h  quat.h
AssemblerEngine.API/includes/math/struct/: affine.h  affine2d.h  box.h  cam.h  color.h  curve.h  euler.h  frustum.h  io.h  mat2.h  mat3.h  mat4.h  plane.h  project.h  quat.h  sphere.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h
AssemblerEngine.API/includes/math/struct/clipspace/: ortho_lh_no.h  ortho_lh_zo.h  ortho_rh_no.h  ortho_rh_zo.h  persp_lh_no.h  persp_lh_zo.h  persp_rh_no.h  persp_rh_zo.h  view_lh_no.h  view_lh_zo.h  view_rh_no.h  view_rh_zo.h
AssemblerEngine.API/src/: string.c
AssemblerEngine.Core/: CMakeLists.txt
AssemblerEngine.Core/includes/AssemblerEngine/: ae_engine.h  ae_filesystem_internal.h  api_registry.h  plugin_registry.h  system_info.h
AssemblerEngine.Core/src/: ae_api_registry_internal.h  ae_filesystem.h  ae_filesystem_internal.h  ae_hashmap_internal.h  ae_os_filesystem_internal.h  ae_os_shared_lib_internal.h  api_registry.c  engine.c  filesystem.c  filesystem.h  hashmap.c  hashmap.h  plugin_registry.c  shared_lib.c  unix_filesystem.c  win32_filesystem.c  win32_system_info.c  win32_vm_allocator.c
AssemblerEngine.Plugins/: CMakeLists.txt
AssemblerEngine.Plugins/ae_camera/: CMakeLists.txt  camera.c
AssemblerEngine.Plugins/ae_imgui/: CMakeLists.txt  imgui.c  imgui.h  shaders.h
AssemblerEngine.Plugins/ae_input/: CMakeLists.txt  input.c
AssemblerEngine.Plugins/ae_logging/: CMakeLists.txt  logging.c
AssemblerEngine.Plugins/ae_opengl_backend/: CMakeLists.txt  glad.c  linux_opengl_backend.c  opengl_renderer.c  opengl_renderer.h  opengl_shader.c  opengl_shader.h  wgl.h  win32_opengl_backend.c
AssemblerEngine.Plugins/ae_opengl_backend/glad/: glad.h
AssemblerEngine.Plugins/ae_window/: CMakeLists.txt  linux_window.c  win32_window.c
AssemblerEngine/headers/AssemblerEngine/: api_registry_api.h  plugin_registry_api.h
AssemblerEngine/headers/apis/: api_registry.h
AssemblerEngine/headers/core/: core.h
AssemblerEngine/includes/AssemblerEngine/: api_registry.h  assembler_engine.h  plugin_registry.h
AssemblerEngine/src/: api_registry.c  assembler_engine.c  filesystem.c  filesystem.h  hashmap.c  hashmap.h  main.c  plugin_registry.c
docs/: DoxyGen.cmake  Doxyfile.in  custom.css  footer.html  header.html  layout.xml
docs/doxygen/: group_defs.dox  mainpage.md  subpage.md
docs/pages/: api.dox  mainpage.md
